# vdirsyncer

./: .codecov.yml  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build.sh  codecov.yml  config.example  dev_requirements.txt  docker-compose.yaml  docker-compose.yml  docs-requirements.txt  example.cfg  install-deps.sh  publish-release.yaml  pyproject.toml  requirements.txt  run-tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
.builds/: 0.yaml  2.yaml  3.yaml  archlinux-py313.yml  archlinux.yaml  archlinux.yml  debian.yaml  style.yaml  tests-archlinux.yml  tests-minimal.yaml  tests-minimal.yml  tests-pypi.yml  tests-release.yaml
.circleci/: config.yml
.github/workflows/: publish.yml
.hypothesis/examples/6988ef90429fa5ca/: 988e4d5e27bac16c
contrib/: vdirsyncer.plist  vdirsyncer.service  vdirsyncer.timer
contrib/conflict_resolution/: resolve_interactively.py
debian/: control  rules
docker/baikal/: Dockerfile  apache.conf  baikal.yaml  configure.sql  start.sh
docker/radicale/: Dockerfile
docker/xandikos/: Dockerfile
docs/: Makefile  api.rst  changelog.rst  claws-mail.md  conf.py  config.rst  contact.rst  contributing.rst  donations.rst  index.rst  installation.rst  keyring.rst  license.rst  make.bat  packaging.rst  partial-sync.rst  problems.rst  server_support.rst  ssl-tutorial.rst  storages.rst  support.rst  supported.rst  troubleshooting.rst  tutorial.rst  vdir.rst  when.rst
docs/tutorials/: baikal.rst  claws-mail.rst  davmail.rst  fastmail.rst  google.rst  icloud.rst  index.rst  nextcloud.rst  owncloud.rst  radicale.rst  systemd-timer.rst  todoman.rst  xandikos.rst
rust/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  vdirsyncer_rustext.h
rust/src/: errors.rs  item.rs  lib.rs
rust/src/storage/: exports.rs  filesystem.rs  http.rs  mod.rs  singlefile.rs  utils.rs
rust/src/storage/dav/: caldav.rs  carddav.rs  mod.rs  parser.rs
scripts/: _build_deb_in_container.bash  circleci-install.sh  dpkg.Dockerfile  id_travis.enc  id_travis.pub  make_ci_conf.py  make_travisconf.py  release-deb.sh  tests.template  travis-install.sh  upload-hypothesis-db.sh  write-dpkg-changelog.py
tests/: __init__.py  conftest.py  test_cli.py  test_doubleclick.py  test_metasync.py  test_repair.py  test_sync.py  test_utils.py
tests/cli/: conftest.py  test_config.py  test_discover.py  test_fetchparams.py  test_main.py  test_repair.py  test_sync.py  test_utils.py
tests/storage/: __init__.py  conftest.py  test_filesystem.py  test_http.py  test_http_with_singlefile.py  test_ldap.py  test_memory.py  test_remotestorage.py  test_singlefile.py
tests/storage/dav/: __init__.py  _owncloud.py  _radicale.py  conftest.py  test_caldav.py  test_carddav.py  test_main.py  test_utils.py
tests/storage/dav/servers/: __init__.py
tests/storage/dav/servers/radicale/: __init__.py  install.sh
tests/storage/dav/servers/skip/: __init__.py
tests/storage/etesync/: install.sh  test_main.py
tests/storage/etesync/etesync_server/: db.sqlite3  manage.py
tests/storage/etesync/etesync_server/etesync_server/: settings.py  urls.py  wsgi.py
tests/storage/etesync/test@localhost/: auth_token  key
tests/storage/servers/baikal/: __init__.py  install.sh
tests/storage/servers/davical/: __init__.py  install.sh
tests/storage/servers/fastmail/: __init__.py
tests/storage/servers/icloud/: __init__.py
tests/storage/servers/mysteryshack/: .gitignore  __init__.py  install.sh  make.sh  variables.sh
tests/storage/servers/nextcloud/: __init__.py  install.sh
tests/storage/servers/radicale/: __init__.py  install.sh
tests/storage/servers/skip/: __init__.py
tests/storage/servers/xandikos/: __init__.py  install.sh
tests/system/: conftest.py
tests/system/cli/: conftest.py  test_config.py  test_discover.py  test_fetchparams.py  test_repair.py  test_sync.py  test_utils.py
tests/system/utils/: test_main.py
tests/unit/: test_exceptions.py  test_metasync.py  test_repair.py  test_retry.py  test_sync.py
tests/unit/cli/: test_config.py  test_discover.py  test_fetchparams.py
tests/unit/sync/: test_status.py  test_sync.py
tests/unit/utils/: test_vobject.py
tests/utils/: __init__.py  test_main.py  test_vobject.py
vdirsyncer/: __init__.py  __main__.py  cli.py  cli_utils.py  doubleclick.py  exceptions.py  http.py  log.py  metasync.py  native.py  repair.py  sync.py  utils.py  vobject.py
vdirsyncer/cli/: .tasks.py.un~  __init__.py  config.py  discover.py  fetchparams.py  tasks.py  utils.py
vdirsyncer/storage/: __init__.py  _rust.py  base.py  caldav.py  dav.py  etesync.py  filesystem.py  google.py  google_helpers.py  http.py  ldap.py  memory.py  olddav.py  remotestorage.py  singlefile.py
vdirsyncer/storage/dav/: __init__.py  base.py  caldav.py  carddav.py
vdirsyncer/sync/: __init__.py  base.py  exceptions.py  status.py
vdirsyncer/tests/: test_storage.py  test_sync.py
vdirsyncer/tests/storage/: __init__.py  test_caldav.py  test_filesystem.py  test_memory.py
vdirsyncer/tests/storage/dav/: __init__.py  test_caldav.py  test_carddav.py
vdirsyncer/utils/: __init__.py  compat.py  http.py  password.py  vobject.py
