[package]
name = "vdirsyncer-rustext"
version = "0.1.0"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]

[lib]
name = "vdirsyncer_rustext"
crate-type = ["cdylib"]

[dependencies]
vobject = "0.4.2"
sha2 = "0.7.0"
failure = "0.1"
shippai = "0.1.1"
atomicwrites = "0.2.0"
uuid = { version = "0.6", features = ["v4"] }
libc = "0.2"
log = "0.4"
