[package]
name = "vdirsyncer-rustext"
version = "0.1.0"
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]

[lib]
name = "vdirsyncer_rustext"
crate-type = ["cdylib"]

[dependencies]
vobject = "0.6.0"
sha2 = "0.7.0"
failure = "0.1"
shippai = "0.3.0"
atomicwrites = "0.2.0"
uuid = { version = "0.6", features = ["v4"] }
libc = "0.2"
log = "0.4"
reqwest = "0.9"
base64 = "0.9" # Used to encode HTTP Basic Auth in HTTP storage
quick-xml = "0.12.0"
url = "1.7"
chrono = "0.4.0"
env_logger = "0.5"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0"
glob = "0.2"
shellexpand = "1.0"
lazy-init = "0.3"
